--- a/site/themes/mttt/sass/_media.queries.scss
+++ b/site/themes/mttt/sass/_media.queries.scss
@@ -21,6 +21,8 @@
     --ref-size: 20px;
     --content-width: 38rem
   }
+
+  .wrppr { padding: 0 2rem; }
 }
 
 @media only screen and (max-width: 767px) {
